--- a/frontend/ecommerce-frontend/src/App.css
+++ b/frontend/ecommerce-frontend/src/App.css
@@ -7,7 +7,7 @@
     border-radius: var(--bs-border-radius) !important;
 }
 
-.navbar{
+.bg-orange{
     background-color: var(--bs-primary);
 }
 
@@ -31,3 +31,4 @@
     --bs-btn-disabled-bg: #8a5347;
     --bs-btn-disabled-border-color: #fff;
   }
+
