--- a/frontend/ecommerce-frontend/src/App.css
+++ b/frontend/ecommerce-frontend/src/App.css
@@ -32,7 +32,7 @@ body{
     --bs-btn-active-border-color: #fff;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #8a5347;
+    --bs-btn-disabled-bg: #c37564;
     --bs-btn-disabled-border-color: #fff;
   }
 
