--- a/frontend/ecommerce-frontend/src/App.css
+++ b/frontend/ecommerce-frontend/src/App.css
@@ -51,3 +51,46 @@ body {
     --bs-btn-hover-bg: #ee4d2d;
     --bs-btn-hover-border-color: #ee4d2d;
 }
+
+code {
+    padding: 5px 10px;
+    display: inline-block;
+  }
+  
+  .container-a {
+    display: grid;
+    /* grid-auto-flow: column; */
+    grid-auto-columns: max-content;
+    grid-column-gap: 10px;
+    justify-content: center;
+    margin: 64px 0;
+  }
+  
+  .field-a {
+    width: 75px;
+    height: 75px;
+    font-size: 40px;
+    text-align: center;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #d3d3d3;
+    transition-property: color, border, box-shadow, transform;
+    transition-duration: 250ms;
+  }
+  .field-a:focus {
+    outline: none;
+    box-shadow: 0 0 7px #686de080;
+    border: 1px solid #686de0;
+    transform: scale(1.05);
+  }
+  
+  .field-a-complete {
+    border: 1px solid #6ab04c;
+    color: #6ab04c;
+  }
+  .field-a-complete[disabled] {
+    background: #6ab04c;
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+  
